--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_with(model: user, local: true) do |f| %>
+<%= form_with(model: @user, local: true) do |f| %>
 
-	<% if user.errors.any? %>
+	<% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this band from being saved:</h2>
 
       <ul>
-      <% user.errors.full_messages.each do |msg| %>
+      <% @user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
