--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -17,15 +17,20 @@
         <td align="center">N/A</td>
       <% end %>
       <td align="center">
+      <% if can? :update, band %>
+ 
         <!-- ONLY SHOW THIS IF THE USER IS ALLOWED TO EDIT THE BAND -->
         <%= link_to(image_tag("icons/edit_dg.gif", :border => 0), edit_band_path(band)) %> &nbsp;
+        <% end %>
+      <% if can? :destroy, band %>
         <!-- ONLY SHOW THIS IF THE USER IS ALLOWED TO DELETE THE BAND -->
         <%= link_to(image_tag("icons/delete_dg.gif", :border => 0), band_path(band), :confirm => 'Are you sure you wish to delete this band?', :method => :delete) %>
-      
+        <% end %>
       </td>
     </tr>
   <% end %>
 </table>
 <p class="supertiny">&nbsp;</p>
-  <!-- ONLY SHOW THIS IF THE USER IS ALLOWED TO CREATE A BAND -->
-  <p><%= link_to "Create New Band", new_band_path %></p>
+  <% if can? :create, Band %>
+    <p><%= link_to "Create New Band", new_band_path %></p>
+  <% end %>
