--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,12 @@
   <body>
     <div id="container">
 		<div id="login">
-      <!-- content once logged in goes here -->
+      <% if logged_in? %>
+      <%= link_to 'Logout', logout_path %>
+      <br>[<%= current_user.proper_name %>:<%= current_user.role %>]
+      <% else %>
+        <%= link_to 'Login', login_path %>
+      <% end %>
 		</div>
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, :id => "flash_#{name}" %>
